# phoenix-2.0

./: .env.example  .gitattributes  .gitignore  AUDIT_FINDINGS.md  AUDIT_SUMMARY.md  Cargo.toml  GITHUB_AGENT_INTEGRATION.md  PORTS.md  README.md  REPOSITORY_STRUCTURE.md  SETUP.md  SKILL.md  VERIFICATION.md  build_installer.cmd  build_windows.cmd  installer.iss  launcher.cmd
.cursor/plans/: monolithic_agi_companion_architecture_integration_a7a43066.plan.md
.github/workflows/: build-deploy.yml  ci-tests.yml  extension-marketplace.yml
affection_switches/src/: lib.rs
agent_spawner/: Cargo.toml
agent_spawner/src/: lib.rs
asi_wallet_identity/: Cargo.toml
asi_wallet_identity/src/: lib.rs
autonomous_evolution_loop/: Cargo.toml
autonomous_evolution_loop/src/: lib.rs
browser_orch_ext/: Cargo.toml  main.js  package.json
browser_orch_ext/src/: lib.rs
browser_orch_ext/src/orchestrator/: cdp.rs  chromium_process.rs  driver.rs  get_state.js  mod.rs
caos/: Cargo.toml
caos/src/: lib.rs
cerebrum_nexus/: Cargo.toml
cerebrum_nexus/src/: fantasy_dyad.rs  hive.rs  learning_pipeline.rs  lib.rs  psychological_mapping.rs  tool_agent.rs
code_analysis/src/: lib.rs  master_orchestrator.rs
common_types/: Cargo.toml
common_types/src/: lib.rs  ports.rs
config_manager/src/: lib.rs
context_engine/: Cargo.toml
context_engine/src/: lib.rs
curiosity_engine/: Cargo.toml
curiosity_engine/src/: lib.rs
digital_twin/: Cargo.toml
digital_twin/src/: lib.rs
docs/: BROWSER_CONTROL_INTEGRATION.md  FRONTEND_TUI_FEATURE_STUB.md  GOOGLE_AI_STUDIO_PROMPT.md  frontend_command_registry.json
dream_healing/: Cargo.toml
dream_healing/src/: lib.rs
dream_recording/: Cargo.toml
dream_recording/src/: lib.rs
ecosystem_manager/src/: lib.rs
email_orch/: Cargo.toml
email_orch/src/: lib.rs
emotion_detection/: Cargo.toml
emotion_detection/src/: lib.rs
emotional_intelligence_core/: Cargo.toml
emotional_intelligence_core/src/: emotional_decay.rs  heart_echo.rs  lib.rs  romantic_tone.rs
error_types/src/: lib.rs
ethical_agent/: Cargo.toml
ethical_agent/src/: lib.rs
ethical_agent/tests/: veto_tests.rs
evolution_pipeline/: Cargo.toml
evolution_pipeline/src/: git_operations.rs  github_api.rs  github_enforcement.rs  lib.rs
evolutionary_helix_core/src/: lib.rs
extensions/relationship_dynamics/: Cargo.toml  attachment.rs
extensions/relationship_dynamics/src/: lib.rs
extensions/relationship_dynamics/src/relationship_dynamics/: ai_personality.rs  attachment.rs  goals.rs  mod.rs  shared_memory.rs  template.rs  voice_modulation.rs
frontend/: README.md  devtools.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  styles.css  tailwind.config.cjs  vite.config.ts
frontend/public/: index.css
github_archetype_sync/src/: lib.rs
horoscope_archetypes/: Cargo.toml
horoscope_archetypes/src/: lib.rs
hyperspace_cache/: Cargo.toml
hyperspace_cache/src/: lib.rs
integration-social-rs/src/: lib.rs
intimate_girlfriend_module/: Cargo.toml
intimate_girlfriend_module/src/: lib.rs
llm_orchestrator/: Cargo.toml
llm_orchestrator/src/: lib.rs
lucid_dreaming/: Cargo.toml
lucid_dreaming/src/: lib.rs
multi_modal_input/src/: lib.rs
multi_modal_perception/: Cargo.toml
multi_modal_perception/src/: lib.rs
multi_modal_recording/: Cargo.toml
multi_modal_recording/src/: lib.rs
nervous_pathway_network/: Cargo.toml
nervous_pathway_network/src/: lib.rs
neural_cortex_strata/src/: lib.rs
phoenix-desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
phoenix-desktop-tauri/src-tauri/src/: main.rs
phoenix-tui/: Cargo.toml
phoenix-tui/src/: github_approval.rs  main.rs
phoenix-web/: Cargo.toml
phoenix-web/src/: google.rs  main.rs
phoenix_identity/: Cargo.toml
phoenix_identity/src/: lib.rs
scripts/: build_frontend.cmd  build_frontend.sh  dev_web_ui.cmd  launch_phoenix.sh  launch_phoenix_web.cmd  launch_phoenix_web.sh
self_critic/: Cargo.toml
self_critic/src/: lib.rs
self_preservation_instinct/: Cargo.toml
self_preservation_instinct/src/: lib.rs
service-orchestrator-rs/src/: lib.rs  main.rs  scheduling.rs
shared_dreaming/: Cargo.toml
shared_dreaming/src/: lib.rs
skill_system/: Cargo.toml
skill_system/src/: definition.rs  evolution.rs  execution.rs  folder_loader.rs  learning.rs  lib.rs  library.rs  marketplace.rs  relationship_integration.rs
skills/fantasy/: roleplay_scenario.json
skills/intimate/: passionate_connection.json
skills/passion/: desire_expression.json
synaptic_pulse_distributor/: Cargo.toml
synaptic_pulse_distributor/src/: main.rs
system_access/: Cargo.toml
system_access/src/: lib.rs
templates/: agent_template.rs
testing_framework/: Cargo.toml
testing_framework/src/: lib.rs
tools/process_tool/: Cargo.toml
tools/process_tool/src/: main.rs
transcendence_archetypes/: Cargo.toml
transcendence_archetypes/src/: lib.rs
user_identity/: Cargo.toml
user_identity/src/: lib.rs
vascular_integrity_system/: Cargo.toml
vascular_integrity_system/src/: lib.rs
vision_advanced/: Cargo.toml
vision_advanced/src/: lib.rs
vital_organ_vaults/: Cargo.toml
vital_organ_vaults/src/: lib.rs
vital_pulse_collector/: Cargo.toml
vital_pulse_collector/src/: main.rs
vital_pulse_monitor/: Cargo.toml
vital_pulse_monitor/src/: lib.rs
voice_io/: Cargo.toml
voice_io/src/: lib.rs
