[package]
name = "evolution_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.18"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"

