[package]
name = "llm_orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
