[package]
name = "system_access"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.12"
chrono = "0.4"
walkdir = "2"
digital_twin = { path = "../digital_twin" }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = { version = "0.22", features = ["alloc"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = [
    "winuser",
    "winsvc",
    "winbase",
    "winnt",
    "fileapi",
    "handleapi",
    "processthreadsapi",
    "tlhelp32",
    "psapi",
    "winnetwk",
    "lmcons",
    "lmaccess",
    "wingdi",
    "wincon",
] }
