[package]
name = "relationship_dynamics"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

llm_orchestrator = { path = "../../llm_orchestrator" }
vital_organ_vaults = { path = "../../vital_organ_vaults" }
intimate_girlfriend_module = { path = "../../intimate_girlfriend_module" }
emotion_detection = { path = "../../emotion_detection" }

