[package]
name = "phoenix-desktop-tauri"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
multi_modal_recording = { path = "../../multi_modal_recording" }

